[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vtrix-sandbox"
version = "0.1.2"
description = "Vtrix sandbox SDK — async Python client for Vtrix sandbox environments"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "VtrixAI", email = "dev@vtrix.ai" }]
keywords = ["sandbox", "code-execution", "vtrix", "devbox"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=12",
]

[project.urls]
Homepage = "https://github.com/VtrixAI/sandbox-python"
Documentation = "https://github.com/VtrixAI/sandbox-python#readme"
"Bug Tracker" = "https://github.com/VtrixAI/sandbox-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
